<resources>
    <string name="app_name">Lab1</string>
    <string name="student">学生</string>
    <string name="teacher">教职工</string>
    <string name="xuehao">学号</string>
    <string name="mima">密码</string>
    <string name="shuruxuehao">请输入学号</string>
    <string name="shurumima">请输入密码</string>
    <string name="header">中山大学学生信息系统</string>
    <string name="login">登录</string>
    <string name="logup">注册</string>
    <string name="description">中山大学校徽</string>
</resources>
