<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.young.lab1.MainActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:textSize="18sp"
        android:text="@string/header"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/textView"
        app:layout_constraintHorizontal_bias="0.498"
        android:layout_marginTop="40dp" />
    <ImageView
        android:layout_width="151dp"
        android:layout_height="150dp"
        android:src="@drawable/sysu"
        android:contentDescription="@string/description"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.502"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:id="@+id/imageView" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="22dp"
        android:layout_margin="20dp"
        android:textSize="18sp"
        android:text="@string/xuehao"
        app:layout_constraintRight_toLeftOf="@+id/editText2"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="20dp"
        android:id="@+id/textView2"
        app:layout_constraintBottom_toBottomOf="@+id/editText2"
        android:layout_marginBottom="20dp"
        app:layout_constraintTop_toTopOf="@+id/editText2"
        android:layout_marginTop="0dp"
        app:layout_constraintVertical_bias="0.5" />
    <EditText
        android:layout_width="216dp"
        android:layout_height="42dp"
        android:textColor="#3F51B5"
        android:textSize="18sp"
        android:inputType="number"
        android:hint="@string/shuruxuehao"
        android:id="@+id/editText2"
        android:layout_marginRight="50dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="22dp"
        android:layout_margin="20dp"
        android:textSize="18sp"
        android:text="@string/mima"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="20dp"

        android:id="@+id/textView3"
        app:layout_constraintRight_toLeftOf="@+id/editText"
        android:layout_marginRight="20dp"
        app:layout_constraintTop_toTopOf="@+id/editText"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/editText"
        android:layout_marginBottom="20dp"
        app:layout_constraintVertical_bias="0.5" />
    <EditText
        android:layout_width="216dp"
        android:layout_height="44dp"
        android:textColor="#3F51B5"
        android:textSize="18sp"
        android:inputType="textPassword"
        android:hint="@string/shurumima"
        android:id="@+id/editText"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/editText2" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:background="@drawable/button"
        android:text="@string/login"
        android:textColor="#fff"
        android:textSize="18sp"
        android:layout_marginStart="12dp"
        android:id="@+id/button2"
        app:layout_constraintLeft_toLeftOf="@+id/guideline"
        android:layout_marginLeft="19dp"
        android:layout_marginTop="23dp"
        app:layout_constraintTop_toBottomOf="@+id/id0" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:background="@drawable/button"
        android:text="@string/logup"
        android:textSize="18sp"
        android:textColor="#fff"
        android:id="@+id/button"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="12dp"

        app:layout_constraintRight_toLeftOf="@+id/guideline"
        android:layout_marginRight="12dp"
        android:layout_marginTop="23dp"
        app:layout_constraintTop_toBottomOf="@+id/id0" />


    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <RadioGroup
        android:id="@+id/id0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="118dp"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/editText">

        <RadioButton
            android:id="@+id/id1"
            android:layout_width="wrap_content"
            android:layout_height="51dp"
            android:layout_marginEnd="24dp"
            android:checked="true"
            android:text="@string/student"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/id2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/teacher"
            android:textSize="18sp" />

    </RadioGroup>


</android.support.constraint.ConstraintLayout>